# GITCGSim

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  code_generator.py
benchmark/: main.rs
gitcg_sim_benchmark/: Cargo.toml  compare.rs  main.rs  match_round.rs  perft.rs  sample.json
gitcg_sim_cli_utils/: Cargo.toml
gitcg_sim_cli_utils/src/: cli_args.rs
gitcg_sim_code_gen/: Cargo.toml
gitcg_sim_code_gen/src/: lib.rs
gitcg_sim_search/: Cargo.toml
gitcg_sim_search/src/: game_state_wrapper.rs  game_trait.rs  lib.rs  linked_list.rs  playout.rs  search.rs
gitcg_sim_search/src/mcts/: debug.rs  mod.rs  policy.rs  proportion.rs
gitcg_sim_search/src/minimax/: mod.rs  search.rs  transposition_table.rs  types.rs
gitcg_sim_search/src/training/: as_slice.rs  eval.rs  features.rs  hard_coded_model.rs  policy.rs
gitcg_sim_search/src/transposition_table/: mod.rs
gitcg_sim_self_play/: Cargo.toml  main.rs  model.rs
gitcg_sim_tui_app/: Cargo.toml  grid.rs  main.rs
proptest-regressions/dice_counter/: pay_cost_props.txt
proptest-regressions/dispatcher_ops/: exec_command_helpers.txt
proptest-regressions/tests/prop_tests/: mod.txt  serialization.txt  state_evolution.txt  transpose.txt  zobrist_hash.txt
sample_decks/: benchmark_1.txt  benchmark_2.txt  benchmark_3.txt  benchmark_4.txt  benchmark_5.txt  benchmark_6.txt  benchmark_7.txt
self_play/: main.rs
src/: builder.rs  builder_macros.rs  dispatcher.rs  game_state_wrapper.rs  iter_helpers.rs  lib.rs  minimax_eval.rs  playout.rs  reaction.rs  rng.rs
src/card_impls/: mod.rs  status_impl_context.rs  trigger_event_context.rs
src/cards/: builders.rs  ids.rs  mod.rs  skills.rs  statuses.rs  summons.rs
src/cards/characters/: albedo.rs  amber.rs  arataki_itto.rs  barbara.rs  beidou.rs  bennett.rs  candace.rs  chongyun.rs  collei.rs  cyno.rs  diluc.rs  diona.rs  eula.rs  fatui_pyro_agent.rs  fischl.rs  ganyu.rs  hu_tao.rs  jadeplume_terrorshroom.rs  jean.rs  kaeya.rs  kamisato_ayaka.rs  kamisato_ayato.rs  keqing.rs  klee.rs  kujou_sara.rs  mod.rs  mona.rs  nahida.rs  nilou.rs  ningguang.rs  noelle.rs  qiqi.rs  raiden_shogun.rs  razor.rs  rhodeia_of_loch.rs  sangonomiya_kokomi.rs  shenhe.rs  stonehide_lawachurl.rs  sucrose.rs  tartaglia.rs  (+11 more)
src/cards/equipment/: artifact.rs  mod.rs  talent.rs  weapon.rs
src/cards/event/: blank_card.rs  calxs_arts.rs  changing_shifts.rs  i_havent_lost_yet.rs  leave_it_to_me.rs  lightning_stiletto.rs  mod.rs  quick_knit.rs  send_off.rs  when_the_crane_returned.rs
src/cards/event/elemental_resonance/: mod.rs
src/cards/event/food/: adeptus_temptation.rs  lotus_flower_crisp.rs  minty_meat_rolls.rs  mod.rs  mushroom_pizza.rs  northern_smoked_chicken.rs
src/cards/support/: dawn_winery.rs  favonius_cathedral.rs  iron_tongue_tian.rs  jade_chamber.rs  katheryne.rs  knights_of_favonius_library.rs  liben.rs  liu_su.rs  liyue_harbor_wharf.rs  mod.rs  paimon.rs  sangonomiya_shrine.rs  tenshukaku.rs  timaeus.rs  tubby.rs  wagner.rs  wangshu_inn.rs
src/data_structures/: capped_list.rs  const_default.rs  linked_list.rs  mod.rs
src/deck/: cli_args.rs  mod.rs  parser.rs
src/dice_counter/: builder.rs  distribution.rs  mod.rs  pay_cost_props.rs  sort.rs
src/dispatcher_ops/: exec_command.rs  exec_command_helpers.rs  mod.rs  nondet.rs  relative_char_idx.rs  state_ops.rs  status_collection.rs  suspension.rs  transpose.rs  types.rs
src/game_tree_search/: game_state_wrapper.rs  game_trait.rs  minimax_types.rs  mod.rs
src/ids/: enums.rs  mod.rs
src/ids/lookup/: card.rs  generated_code.rs  mod.rs  status.rs  summon.rs  support.rs
src/mcts/: debug.rs  mod.rs  policy.rs  proportion.rs
src/minimax/: eval.rs  mod.rs  search.rs  transposition_table.rs  types.rs
src/rule_based/: mod.rs
src/status_impls/: composition.rs  mod.rs  primitives.rs  static_impls.rs
src/tcg_model/: deal_dmg.rs  enums.rs  mod.rs
src/tests/: duel_flow.rs  mod.rs  perf.rs  serialization.rs  validation.rs  zobrist_hash.rs
src/tests/cards/: elemental_resonance.rs  equipment.rs  mod.rs  support.rs
src/tests/characters/: barbara.rs  beidou.rs  bennett.rs  chongyun.rs  collei.rs  cyno.rs  diluc.rs  eula.rs  ganyu.rs  jadeplume_terrorshroom.rs  jean.rs  kaeya.rs  kamisato_ayaka.rs  keqing.rs  klee.rs  kujou_sara.rs  mod.rs  mona.rs  nahida.rs  nilou.rs  noelle.rs  raiden_shogun.rs  stonehide_lawachurl.rs  sucrose.rs  tartaglia.rs  tighnari.rs  xiangling.rs  xingqiu.rs  yoimiya.rs
src/tests/elemental_reactions/: frozen.rs  mod.rs  overloaded.rs  swirl.rs
src/tests/prop_tests/: generator.rs  mod.rs  serialization.rs  state_evolution.rs  transpose.rs  zobrist_hash.rs
src/training/: as_slice.rs  eval.rs  features.rs  hard_coded_model.rs  hard_coded_model_hidden_layer.rs  mod.rs  policy.rs
src/transposition_table/: mod.rs
src/types/: applied_effect_state.rs  by_player.rs  card_defs.rs  card_impl.rs  card_selection.rs  game_state.rs  input.rs  logging.rs  mod.rs  nondet.rs  status_collection.rs  status_impl.rs  status_spec_modifier.rs
src/types/applied_effect_state/: builder.rs  mod.rs
src/types/char_state/: builder.rs  mod.rs
src/types/command/: command_context.rs  mod.rs
src/zobrist_hash/: game_state_mutation.rs  hash_provider.rs  mod.rs
