[package]
name = "gitcg_sim"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = 1

[profile.release]
debug = true
codegen-units = 1
opt-level = 3

[profile.minimal]
inherits = 'release'
debug = false
strip = true
opt-level = 3
codegen-units = 1
lto = true

[features]
default = [
    "std",
    "hash128"
]
std = [
    "dep:thiserror"
]
serde = [
    "dep:serde",
    "enumset/serde",
    "rand/serde",
    "rand/serde1",
    "smallvec/serde"
]
wasm = [
    "getrandom/js",
    "dep:wasm-bindgen",
    "serde"
]
hash128 = []
no_static_status_impl = []

[workspace]
members = [
    "gitcg_sim_search",
    "gitcg_sim_cli_utils",
    "gitcg_sim_tui_app",
    "gitcg_sim_self_play",
    "gitcg_sim_benchmark",
]

[lib]
name = "gitcg_sim"
path = "src/lib.rs"

[dependencies]
bitfield = { version = "0.14.*" }
constdefault = { version = "1.0.*" }
enum-map = { version = "2.4.*" }
enum-map-derive = { version = "0.3.*" }
enumset = { version = "1.0.*", features = [] }
getrandom = { version = "0.2" }
lazy_static = { version = "1.4.*" }
rand = { version = "0.8.*", features = ["small_rng"] }
rustc-hash = { version = "1.1.*" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
smallvec = { version = "1.13.*", features = [] }
thiserror = { version = "1.0.*", optional = true }
wasm-bindgen = { version = "0.2.*", optional = true }

[dev-dependencies]
bincode = { version = "1.2.1" }
serde_json = { version = "1.0.94" }
proptest = "1.0.0"
