[package]
name = "gitcg_sim_benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitcg_sim_benchmark"
path = "main.rs"

[dependencies]
gitcg_sim = { path = ".." }
gitcg_sim_search = { path = "../gitcg_sim_search" }
gitcg_sim_cli_utils = { path = "../gitcg_sim_cli_utils" }
structopt = { version = "0.3.*" }
instant = { version = "0.1" }
lazy_static = { version = "1.4.*" }
rayon = { version = "^1.7.0" }
