[package]
name = "gitcg_sim_self_play"
version = "0.1.0"
edition = "2021"

[features]
default = []

[[bin]]
name = "gitcg_sim_self_play"
path = "main.rs"

[dependencies]
gitcg_sim = { path = "..", features = ["serde"] }
gitcg_sim_search = { path = "../gitcg_sim_search", features = ["training", "serde"] }
gitcg_sim_cli_utils = { path = "../gitcg_sim_cli_utils" }
dfdx = { version = "0.13.0", features = ["numpy"] }
ndarray = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94" }
structopt = { version = "0.3.*" }
rayon = { version = "^1.7.0" }
