[package]
name = "gitcg_sim_tui_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitcg_sim_tui_app"
path = "main.rs"

[dependencies]
gitcg_sim = { path = ".." }
gitcg_sim_search = { path = "../gitcg_sim_search" }
gitcg_sim_cli_utils = { path = "../gitcg_sim_cli_utils" }
tui = { version = "0.19" }
crossterm = { version = "0.25" }
structopt = { version = "0.3.*" }
